Fri Mar 12 15:54:17 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (clean-windows): Don't blow away Krbcc32.lib by
		accident.

Tue Mar 18 12:08:50 1997  Michael Graff  <explorer@flame.org>

	* registry.h, registry.c: add.

Thu Mar 13 20:17:12 1997  Michael Graff  <explorer@flame.org>

	* gic.c, gic.h, vardlg.c, vardlg.h: Finish up the variable dialog box
	code.

Thu Mar  6 21:45:05 1997  Michael Graff  <explorer@flame.org>

	* gic.c, gic.h:  Added to start using get_init_creds.

	* vardlg.c, vardlg.h: on-the-fly variable dialog building functions.

