@@ -1,3 +1,10 @@
+1999-04-01  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	*  gic.c (gic_prompter), vardlg.c (vardlg_build), gic.h, vardlg.h:
+		Update to use new prompter prototype which takes an extra
+		argument for the window titlebar name.  (From Frank
+		Cusack)  [krb5-kdc/662]
+	
 Fri Mar 12 15:54:17 1999  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* Makefile.in (clean-windows): Don't blow away Krbcc32.lib by
